--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Byte by Byte: IT Quiz Challenge - Menu</title>
+<title>Byte by Byte - Main Menu</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 body {
@@ -11,13 +11,12 @@ body {
   color: white;
   text-align: center;
   padding: 20px;
-  transition: background 0.5s;
 }
-h1 { margin-bottom: 20px; color:#fde047; }
+h1 { color:#fde047; }
 .menuItem {
   background:#1e293b;
   padding:20px;
-  margin:10px auto;
+  margin:15px auto;
   width:300px;
   border-radius:12px;
   font-size:1.5rem;
@@ -31,11 +30,13 @@ h1 { margin-bottom: 20px; color:#fde047; }
 <h2>Main Menu</h2>
 
 <div id="menu">
-  <div class="menuItem active" data-target="start.html">Start</div>
-  <div class="menuItem" data-target="settings.html">Settings</div>
-  <div class="menuItem" data-target="leaderboard.html">Leaderboard</div>
-  <div class="menuItem" data-target="intro.html">Introduction</div>
+  <div class="menuItem active" data-page="start.html">Start</div>
+  <div class="menuItem" data-page="settings.html">Settings</div>
+  <div class="menuItem" data-page="leaderboard.html">Leaderboard</div>
+  <div class="menuItem" data-page="introduction.html">Introduction</div>
 </div>
+
+<p>Use A/B to move, C to select</p>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
@@ -49,7 +50,7 @@ const firebaseConfig = {
   projectId: "byte-by-byte-f7a4c",
   storageBucket: "byte-by-byte-f7a4c.firebasestorage.app",
   messagingSenderId: "838552047744",
-  appId: "1:838552047744:web:f653b9fba96e49aa44d665"
+  appId: "1:838552047744:web:f653b9fba96e49d665"
 };
 
 /* 🔌 INITIALIZE FIREBASE */
@@ -57,31 +58,32 @@ const app = initializeApp(firebaseConfig);
 const db = getDatabase(app);
 const controlRef = ref(db,"control");
 
-/* 🎮 MENU LOGIC */
+/* ⚡ MENU LOGIC */
 const menuItems = Array.from(document.querySelectorAll(".menuItem"));
 let currentIndex = 0;
 
-function updateMenu(){
+function updateActive(){
   menuItems.forEach((el,i)=> el.classList.toggle("active", i===currentIndex));
 }
 
-/* 🔌 ESP32 BUTTON NAVIGATION */
-onValue(controlRef, snapshot => {
-  const data = snapshot.val();
-  if(!data||!data.button) return;
-  const btn = data.button;
-  console.log("Button pressed:", btn); 
-  set(controlRef,{button:""}); // reset immediately
+updateActive();
 
-  if(btn==="A"){ // Move up
+/* 🔌 ESP32 BUTTON CONTROLS */
+onValue(controlRef, snapshot=>{
+  const data = snapshot.val();
+  if(!data || !data.button) return;
+  const btn = data.button;
+  set(controlRef,{button:""}); // reset
+
+  if(btn==="A"){ // move up
     currentIndex = (currentIndex-1 + menuItems.length) % menuItems.length;
-    updateMenu();
-  } else if(btn==="B"){ // Move down
+    updateActive();
+  } else if(btn==="B"){ // move down
     currentIndex = (currentIndex+1) % menuItems.length;
-    updateMenu();
-  } else if(btn==="C" || btn==="D"){ // Select
-    const target = menuItems[currentIndex].dataset.target;
-    window.location.href = target;
+    updateActive();
+  } else if(btn==="C"){ // select
+    const page = menuItems[currentIndex].dataset.page;
+    window.location.href = page;
   }
 });
 </script>
