--- a/start.html
+++ b/start.html
@@ -1,94 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Byte by Byte – Start</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <!-- FIREBASE SDKs -->
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-
-  <style>
-    body {
-      margin: 0;
-      padding: 20px;
-      font-family: Arial, sans-serif;
-      background: #0f172a;
-      color: white;
-      text-align: center;
-      transition: background 0.4s ease;
-    }
-
-    body.correct { background: #14532d; }
-    body.wrong { background: #7f1d1d; }
-
-    h1 { margin-bottom: 10px; }
-
-    #hud {
-      display: flex;
-      justify-content: space-around;
-      margin-bottom: 15px;
-      font-size: 1.2rem;
-    }
-
-    #question {
-      margin: 20px auto;
-      font-size: 1.4rem;
-      max-width: 700px;
-    }
-
-    #timer, #suspense {
-      margin: 10px;
-      font-size: 1.2rem;
-    }
-
-    .choices {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 15px;
-      max-width: 500px;
-      margin: 30px auto;
-    }
-
-    .choice {
-      background: #334155;
-      padding: 18px;
-      border-radius: 12px;
-      font-size: 1.1rem;
-    }
-
-    .choice.selected { background: #fde047; color: black; }
-    .choice.correct { background: #22c55e; }
-    .choice.wrong { background: #ef4444; }
-  </style>
+<meta charset="UTF-8">
+<title>Byte by Byte - Game</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+<style>
+body { font-family:'Roboto',sans-serif; background:linear-gradient(to right,#0f172a,#1e293b); color:white; text-align:center; margin:0; padding:20px; transition: background 0.5s; }
+#spinner,#timer,#suspense,#question,#scoreLives{margin:15px auto;padding:18px;width:340px;border-radius:16px;background:#475569;}
+.choices{display:grid;grid-template-columns:repeat(2,160px);gap:20px;justify-content:center;margin-top:30px;}
+.choice{padding:22px;border-radius:16px;background:#6366f1;cursor:pointer;}
+.correct-flash{animation:flashGreen 1s ease-in-out 1 forwards;}
+.wrong-flash{animation:flashRed 1s ease-in-out 1 forwards;}
+@keyframes flashGreen{0%{background:linear-gradient(to right,#0f172a,#1e293b);}50%{background:#14532d;}100%{background:linear-gradient(to right,#0f172a,#1e293b);}}
+@keyframes flashRed{0%{background:linear-gradient(to right,#0f172a,#1e293b);}50%{background:#7f1d1d;}100%{background:linear-gradient(to right,#0f172a,#1e293b);}}
+</style>
 </head>
-
 <body>
 
-  <h1>🎮 Byte by Byte</h1>
+<h1>🕹️ Byte by Byte</h1>
+<h2>Gameplay</h2>
 
-  <!-- HUD -->
-  <div id="hud">
-    <div id="score">Score: 0</div>
-    <div id="lives">Lives: 5</div>
-  </div>
+<div id="spinner">Category will appear here</div>
+<div id="timer">⏱️ Time left</div>
+<div id="suspense">⏳ Suspense</div>
+<div id="question">Question will appear here</div>
 
-  <!-- GAME TEXT -->
-  <div id="timer"></div>
-  <div id="suspense"></div>
-  <div id="question">Loading question...</div>
+<div class="choices">
+  <div id="A" class="choice">A</div>
+  <div id="B" class="choice">B</div>
+  <div id="C" class="choice">C</div>
+  <div id="D" class="choice">D</div>
+</div>
 
-  <!-- ANSWERS -->
-  <div class="choices">
-    <div id="choiceA" class="choice">A</div>
-    <div id="choiceB" class="choice">B</div>
-    <div id="choiceC" class="choice">C</div>
-    <div id="choiceD" class="choice">D</div>
-  </div>
+<div id="scoreLives">⭐ Score: 0 | ❤️ Lives: 5</div>
 
-  <!-- MAIN GAME LOGIC -->
-  <script src="main.js"></script>
-
+<script type="module" src="main.js"></script>
 </body>
 </html>
