--- a/leaderboard.html
+++ b/leaderboard.html
@@ -5,39 +5,34 @@
 <title>Leaderboard - Byte by Byte</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-body {
-  font-family: Arial, sans-serif;
+body{
+  font-family:Arial,sans-serif;
   background:#0f172a;
   color:white;
   text-align:center;
   padding:20px;
 }
-h1 { color:#fde047; }
-#scores {
-  margin-top:20px;
-  max-height:400px;
-  overflow:hidden;
-}
-.scoreItem {
+h1{color:#fde047}
+.scoreItem{
   background:#1e293b;
   margin:10px auto;
-  width:300px;
+  width:320px;
   padding:15px;
   border-radius:12px;
-  font-size:1.2rem;
-  transition: background 0.3s;
   display:flex;
-  justify-content:space-between;
+  gap:12px;
   align-items:center;
 }
-.active { background:#fde047; color:black; }
-.icon { margin-right:10px; font-size:1.3rem; }
+.active{background:#fde047;color:black}
+.icon{font-size:1.5rem}
+small{opacity:0.7}
 </style>
 </head>
+
 <body>
-<h1>🏆 Leaderboard</h1>
+<h1>🏆 TOP 10 LEADERBOARD</h1>
 <div id="scores"></div>
-<p>Use A/B to scroll, D to return to Menu</p>
+<p>A/B scroll · D return</p>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
@@ -54,63 +49,59 @@ const firebaseConfig = {
   appId: "1:838552047744:web:f653b9fba96e49d665"
 };
 
-/* 🔌 INITIALIZE FIREBASE */
 const app = initializeApp(firebaseConfig);
 const db = getDatabase(app);
 const leaderboardRef = ref(db,"leaderboard");
 const controlRef = ref(db,"control");
 
 const scoresDiv = document.getElementById("scores");
-let entries = [];
-let currentIndex = 0;
-const visibleCount = 5; // show 5 scores at a time
+let entries=[];
+let index=0;
+const medals=["🥇","🥈","🥉"];
 
-const medals = ["🥇","🥈","🥉"]; // top 3 icons
+function render(){
+  scoresDiv.innerHTML="";
+  if(entries.length===0) return;
 
-function renderScores(){
-  scoresDiv.innerHTML = "";
-  const start = Math.max(0,currentIndex);
-  const end = Math.min(entries.length, start+visibleCount);
-  for(let i=start;i<end;i++){
-    const div = document.createElement("div");
-    div.className="scoreItem";
-    if(i===currentIndex) div.classList.add("active");
+  const e = entries[index];
+  const medal = index<3 ? medals[index] : `#${index+1}`;
+  const date = new Date(e.timestamp).toLocaleString();
 
-    const icon = i<3 ? `<span class="icon">${medals[i]}</span>` : '';
-    div.innerHTML=`${icon}<span>Score: ${entries[i].score}</span>`;
-    scoresDiv.appendChild(div);
-  }
+  scoresDiv.innerHTML=`
+    <div class="scoreItem active">
+      <span class="icon">${medal}</span>
+      <div>
+        <div>⭐ Score: ${e.score}</div>
+        <div>🔥 Streak: ${e.streak}</div>
+        <small>${date}</small>
+      </div>
+    </div>
+  `;
 }
 
-onValue(leaderboardRef, snapshot=>{
-  const data = snapshot.val() || {};
-  entries = [];
-  for(const id in data){
-    entries.push({score:data[id].score, timestamp:data[id].timestamp});
-  }
-  // Sort: high score first, tie-breaker by earliest timestamp
-  entries.sort((a,b)=>b.score - a.score || a.timestamp - b.timestamp);
-  currentIndex=0;
-  renderScores();
+onValue(leaderboardRef, snap=>{
+  entries=[];
+  snap.forEach(c=>{
+    entries.push(c.val());
+  });
+
+  entries.sort((a,b)=> b.score - a.score || a.timestamp - b.timestamp);
+  entries = entries.slice(0,10);
+  index=0;
+  render();
 });
 
-/* 🔌 ESP32 BUTTON CONTROLS */
-onValue(controlRef, snapshot=>{
-  const btn = snapshot.val()?.button;
+/* 🔘 ESP32 CONTROL */
+onValue(controlRef,snap=>{
+  const btn=snap.val()?.button;
   if(!btn) return;
-  set(controlRef,{button:""}); // reset
+  set(controlRef,{button:""});
 
-  if(btn==="A"){ // move up
-    if(entries.length===0) return;
-    currentIndex=Math.max(0,currentIndex-1);
-    renderScores();
-  } else if(btn==="B"){ // move down
-    if(entries.length===0) return;
-    currentIndex=Math.min(entries.length-1,currentIndex+1);
-    renderScores();
-  } else if(btn==="D"){ // back to menu
-    window.location.href="index.html";
-  }
+  if(btn==="A") index=Math.max(0,index-1);
+  if(btn==="B") index=Math.min(entries.length-1,index+1);
+  if(btn==="D") window.location.href="index.html";
+
+  render();
 });
 </script>
 </body>
