--- a/start.html
+++ b/start.html
@@ -14,11 +14,11 @@ body {
   transition: background 0.5s;
 }
 h1 { margin-bottom: 5px; color:#fde047; }
-#spinner, #timer, #suspense, #scoreLives, #questionCounter, #streak {
+#spinner, #timer, #suspense, #scoreLives, #streak, #questionCounter {
   margin: 10px auto;
-  font-size: 1.4rem;
+  font-size: 1.5rem;
   padding: 12px;
-  width: 320px;
+  width: 340px;
   background: #1e293b;
   border-radius: 12px;
 }
@@ -27,7 +27,7 @@ h1 { margin-bottom: 5px; color:#fde047; }
   grid-template-columns: repeat(2, 160px);
   gap: 15px;
   justify-content: center;
-  margin-top: 25px;
+  margin-top: 20px;
 }
 .choice {
   padding: 18px;
@@ -35,39 +35,32 @@ h1 { margin-bottom: 5px; color:#fde047; }
   background: #334155;
   font-size: 1.2rem;
   cursor: pointer;
-  transition: background 0.5s;
+  transition: background 0.3s;
 }
 .correct { background: #22c55e; }
 .wrong { background: #ef4444; }
-.active { background: #fde047; color:black; }
+.correct-flash { background-color: #14532d !important; transition: background 0.5s; }
+.wrong-flash { background-color: #7f1d1d !important; transition: background 0.5s; }
 
-/* Streak color per level */
-#streak span {
-  display: inline-block;
-  padding: 6px 12px;
-  border-radius: 8px;
-  font-weight: bold;
-}
-.streak-low { background:#3b82f6; }      /* 1-2 streak */
-.streak-medium { background:#facc15; }   /* 3-4 streak */
-.streak-high { background:#f97316; }     /* 5-7 streak */
-.streak-max { background:#ef4444; }      /* 8+ streak */
+/* ================= STREAK COLORS ================= */
+.streak-low { color:#e0e0e0; }
+.streak-medium { color:#facc15; }
+.streak-high { color:#f97316; }
+.streak-max { color:#fde047; font-weight:bold; }
 </style>
 </head>
 <body>
-
 <h1>🕹️ Byte by Byte</h1>
 <h2>IT Quiz Challenge</h2>
 
 <div id="spinner">📂 Press A to start</div>
-<div id="questionCounter">❓ Question 0 / 0</div>
-<div id="timer">⏱️ --s</div>
-<div id="suspense">⏳ --s</div>
+<div id="timer"></div>
+<div id="suspense"></div>
+<div id="questionCounter"></div>
+<div id="streak">🔥 Streak: <span>0</span></div>
 <div id="scoreLives">⭐ Score: 0 | ❤️ Lives: 3</div>
-<div id="streak">🔥 Streak: <span class="streak-low">0</span></div>
 
 <div id="question"></div>
-
 <div class="choiceContainer">
   <div id="A" class="choice">A</div>
   <div id="B" class="choice">B</div>
@@ -76,17 +69,5 @@ h1 { margin-bottom: 5px; color:#fde047; }
 </div>
 
 <script type="module" src="main.js"></script>
-<script>
-/* Update streak display with color */
-export function updateStreakDisplay(streak){
-  const span = document.querySelector("#streak span");
-  span.textContent = streak;
-  span.className = ""; // reset
-  if(streak<=2) span.classList.add("streak-low");
-  else if(streak<=4) span.classList.add("streak-medium");
-  else if(streak<=7) span.classList.add("streak-high");
-  else span.classList.add("streak-max");
-}
-</script>
 </body>
 </html>
